# StageMusicBot

./: .env  .gitignore  .replit  README.md  albumart.json.example  config.json.example  config.py  keep_alive.py  main.py  pyproject.toml  replit.nix  requirements.txt
.cache/replit/nix/: env.json
.github/: dependabot.yml
.upm/: store.json
src/: get_info.py  list_songs.py
