[tool.poetry]
name = "repl_nix_StageMusicBot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
mutagen = "^1.45.1"
python-dotenv = "^0.21.0"
discord = "^2.0.0"
eyed3 = "^0.9.7"
Flask = "^2.2.2"
ffmpeg = "^1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
